--- a/src/components/styles/map.css
+++ b/src/components/styles/map.css
@@ -1,3 +1,11 @@
+.card-container {
+    display: flex;
+    justify-content: center;
+    flex: 0 0 calc(33.33% - 1rem);
+    margin: 0.5rem;
+    padding: 2rem;
+  }
+
 .card {
     display: flex;
     flex-direction: column;
@@ -15,7 +23,7 @@
 .icon {
     text-align: center;
     font-size: 2.5rem;
-    border: solid 1px;
+    /* border: solid 1px; */
     border-radius: 50%;
 }
 
@@ -27,4 +35,13 @@
 .card-text {
     font-size: 1rem;
     margin: 1rem;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin: 0 auto;
 }
