--- a/src/components/styles/map.css
+++ b/src/components/styles/map.css
@@ -6,14 +6,15 @@
     padding: 2rem;
   }
 
-.card {
+  .card {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    height: 475px;
+    min-height: 300px;
     width: 300px;
-}
+  }
+  
 
 .card:hover {
     cursor: pointer;
@@ -23,18 +24,21 @@
 .icon {
     text-align: center;
     font-size: 2.5rem;
-    /* border: solid 1px; */
-    border-radius: 50%;
+    margin: 1rem;
 }
 
 .card-title {
     font-size: 1.5rem;
     margin: 1rem;
+    text-transform: uppercase;
+    text-align: center;
 }
 
 .card-text {
     font-size: 1rem;
     margin: 1rem;
+    overflow: auto;
+    height: 200px;
 }
 
 .row {
