--- a/src/components/styles/createAccount.css
+++ b/src/components/styles/createAccount.css
@@ -6,6 +6,10 @@
 }
 
 .ca-form-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
     margin-top: 10vh;
 }
 
