--- a/src/components/styles/map.css
+++ b/src/components/styles/map.css
@@ -41,6 +41,12 @@
     height: 200px;
 }
 
+.card-pages {
+    text-align: center;
+    font-size: 1rem;
+    font-weight: bold;
+}
+
 .row {
     display: flex;
     flex-wrap: wrap;
