--- a/src/components/styles/createAccount.css
+++ b/src/components/styles/createAccount.css
@@ -13,3 +13,13 @@
     margin-top: 10vh;
 }
 
+.ca-form-title {
+    text-align: center;
+}
+
+.form-inputs {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
